--- a/scripts/Accessory_figs_20160218.Rmd
+++ b/scripts/Accessory_figs_20160218.Rmd
@@ -105,7 +105,7 @@ write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table01_AccCosts_by_Species
 
 #Figure 3. Ternary diagram showing seed_costs
 ```{r}
-ternary <- select(SummarySpp[["mean"]],species,seed_size,prepollen_costs,pack_disp_costs,seed_costs,embryo_endo_size)
+ternary <- dplyr::select(SummarySpp[["mean"]],species,seed_size,prepollen_costs,pack_disp_costs,seed_costs,embryo_endo_size)
 ternary$per_poll <-100*ternary$prepollen_costs/ternary$seed_costs
 ternary$post_poll <- 100-ternary$per_poll
 ternary$per_seed <-100*ternary$embryo_endo_size/ternary$seed_costs
@@ -117,16 +117,16 @@ mod_disp <- sma(per_disp~seed_costs,ternary,slope.test=0,method="OLS",log="x")
 mod_post_poll <- sma(post_poll~seed_costs,ternary,slope.test=0,method="OLS",log="x")
 
 costs_per_seed <- as.data.frame("costs for seed (%)")
-costs_per_seed <- cbind(costs_per_seed,select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+costs_per_seed <- cbind(costs_per_seed,dplyr::select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
 names(costs_per_seed) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
 
 costs_per_seed2 <- as.data.frame("costs for pre-pollination (%)")
-costs_per_seed2 <- cbind(costs_per_seed2,select(mod_poll$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+costs_per_seed2 <- cbind(costs_per_seed2,dplyr::select(mod_poll$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
 names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
 costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
 
 costs_per_seed2 <- as.data.frame("costs for dispersal (%)")
-costs_per_seed2 <- cbind(costs_per_seed2,select(mod_disp$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+costs_per_seed2 <- cbind(costs_per_seed2,dplyr::select(mod_disp$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
 names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
 costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
 
@@ -142,31 +142,52 @@ points(per_disp~seed_costs,ternary,col="blue",pch=16,cex=2)
 abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
 abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
 abline(mod_disp$groupsummary["Int"][[1]],mod_disp$groupsummary["Slope"][[1]],col="blue",lwd=2)
-legend("topleft",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
-dev.off()
+legend("topright",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
+v <- sqrt(ternary$seed_costs/500)
+ternary$horz <- c(1.8,1.3,1.2,-0.3,0.6,0.6,0.5,-0.2,1.3,1.7,1.4,-0.2,-0.3,-0.3)
+ternary$vert <- c(v[1]*-1.7,v[2]*1.1,v[3]*1.2,v[4],v[5]*-2.3,v[6]*4.5,v[7],v[8]*1.6,v[9],v[10]*0.2,v[11],v[12],v[13],v[14])
+ternary = ternary[with(ternary, order(-seed_costs)), ]
+label <- 20
 
+dev.off()
+library(ggtern)
 win.metafile("figs2/Accessory_Costs/Figure03_ternary_diagram_seed_costs.wmf", height=5, width=5)
 plot
 
-par(mfrow=c(1,1), cex=1, omi=c(1,1,1,1), mai=c(.1,.1,.1,.1)) 
+par(mfrow=c(1,1), cex=1, omi=c(2,2,2,2), mai=c(2,2,2,2)) 
+
 
 ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
-  labs(y = "embryo+endosperm",
-       x = "pre-poll",
-       z = "pack&disp",
-       Tarrow = "embryo + endosperm weight (%)",
-       Larrow = "pre-pollination costs (%)",
-       Rarrow = "packaging & dispersal costs (%)",
-       title = "Seed cost components",
-       size = 3) +
-       geom_point(size=sqrt(ternary$seed_costs/2),shape=20,color=col.spp()) +
-       theme_bw() + 
+      geom_point(size=sqrt(ternary$seed_costs/2),shape=20,color=col.spp(ternary$species)) +
+      theme_bw() + 
       theme_showarrows() +
-       geom_text(label=ternary$species, color="black", hjust=-.3, vjust=sqrt(ternary$seed_costs/500),size=2)
+      geom_text(label=ternary$species, color="black", hjust=ternary$horz, 
+                 vjust=ternary$vert,size=2) +
+      ggtitle("Seed cost components")+
+      labs(T="embryo+endosperm",L="pre-pollination",R="provisioning")+
+      Tarrowlab("embryo + endosperm weight (%)")+
+      Larrowlab("pre-pollination costs (%)")+
+      Rarrowlab("provisioning costs (%)")+
+      theme(plot.title = element_text(size=11,face="bold"))+
+      theme(tern.axis.title.T = element_text(size=9,face="plain"))+
+      theme(tern.axis.title.L = element_text(size=9,face="plain",hjust=0,vjust=1.7))+
+      theme(tern.axis.title.R = element_text(size=9,face="plain",hjust=1,vjust=1.7))+
+      theme(tern.axis.arrow.text = element_text(size=9,face="plain"))+
+      theme(tern.axis.arrow.start= 0.2)+ 
+      theme(tern.axis.arrow.finish=0.8)
+
 
 dev.off()
 ```
 
+
+      labs(
+        y = "embryo+endosperm",
+        x = "pre-pollination",
+        z = "provisioning",
+        Tarrow = "embryo + endosperm weight (%)",
+        Larrow = "pre-pollination costs (%)",
+        Rarrow = "provisioning costs (%)")+
 #Table 2 showing seedcost breakdown into components, by species
 ```{r}
 prop_seed_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_costs,prop_prepollen_costs,prop_dispersal_costs,prop_seed_costs)
@@ -220,17 +241,18 @@ options(scipen = 5)
 
 plot(accessory_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="total accessory costs per seed (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(accessory_per_seed) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
-words.top.left.logxy(mod)
+#words.top.left.logxy(mod)
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+legend("bottomright",legend=labels.spp.genus(),col=col.spp(),pch=16, cex=0.9,bty="n",text.font=3)
 
 plot(prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pollinator attraction costs per seed (mg/seed)",xlab="",cex=1.5)
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["se"]]$prepollen_costs)
 mod <- lm(log10(prepollen_costs)~log10(embryo_endo_size),SummarySpp[["mean"]])
-words.top.left.logxy(mod)
+#words.top.left.logxy(mod)
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
@@ -239,7 +261,7 @@ axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 plot(postpollen_all_per_seed~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required provisioning costs per seed (mg/seed)",xlab="",cex=1.5)
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$postpollen_all_per_seed,SummarySpp[["se"]]$prepollen_costs)
 mod <- lm(log10(postpollen_all_per_seed)~log10(embryo_endo_size),SummarySpp[["mean"]])
-words.top.left.logxy(mod)
+#words.top.left.logxy(mod)
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
@@ -262,7 +284,7 @@ abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 words.bottom.left.logxy(mod)
 
-acc_by_species <- select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
+acc_by_species <- dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
 
 plot(prepollen_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen success costs (mg/seed)",xlab="",cex=1.5)
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["se"]]$prepollen_costs)
@@ -271,7 +293,7 @@ words.bottom.left.logxy(mod)
 slopes <- sma(prepollen_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
@@ -280,7 +302,7 @@ slopes <- sma(failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slo
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$failure_per_seed,SummarySpp[["se"]]$failure_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(prepollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(prepollen_all_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
@@ -289,7 +311,7 @@ slopes <- sma(prepollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 # plot(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
 # mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
@@ -298,7 +320,7 @@ acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2
 # slopes <- sma(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1, log="xy",method="OLS")
 # abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 # abline(slopes$groupsummary["Int"][[1]],1,col="red")
-# acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+# acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(pack_disp_costs) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
@@ -307,11 +329,11 @@ slopes <- sma(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),slop
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 
 slopes <- sma(postpollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
 
@@ -331,7 +353,7 @@ abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 words.bottom.left.logxy(mod)
 
-acc_by_species <- select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
+acc_by_species <- dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
 
 plot(prepollen_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen success costs (mg/seed)",xlab="",cex=1.5)
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["se"]]$prepollen_costs)
@@ -340,7 +362,7 @@ words.bottom.left.logxy(mod)
 slopes <- sma(prepollen_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(failure_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(failure_per_seed) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
@@ -349,7 +371,7 @@ slopes <- sma(failure_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$failure_per_seed,SummarySpp[["se"]]$failure_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(prepollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(prepollen_all_per_seed) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
@@ -358,7 +380,7 @@ slopes <- sma(prepollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[[
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(pack_disp_costs) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
@@ -367,11 +389,11 @@ slopes <- sma(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 mtext(text="embryo + endosperm size (mg)",side=1,line=1.5,outer=TRUE)
 
 slopes <- sma(postpollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
 
@@ -391,7 +413,7 @@ mod <- sma(seedset~seed_size,SummarySpp[["mean"]],log="xy", method="OLS")
 sma_abline(mod)
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
+legend("bottomleft",legend=labels.spp.genus(),col=col.spp(),pch=16, cex=.9,bty="n",text.font=3)
 
 #species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
 plot(prop_prepollen_costs~seedset,SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.01,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
@@ -430,23 +452,23 @@ plot
 par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
 options(scipen = 4)
 
-plot(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.01,100),ylim=c(.004,.3),cex=1.5,xaxt="n",xlab="embryo + endosperm size (mg)",ylab="seed set")
+plot(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.01,100),ylim=c(.004,.3),cex=1.5,xaxt="n",yaxt="n",xlab="embryo + endosperm size (mg)",ylab="seed set")
 mod <- sma(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy", method="OLS")
 sma_abline(mod)
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
-text((10^(0.99*(par("usr")[2]-par("usr")[1])+par("usr")[1])),(10^(0.98*(par("usr")[4]-par("usr")[3])+par("usr")[3])),
-     paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
+text((10^(0.99*(par("usr")[2]-par("usr")[1])+par("usr")[1])),(10^(0.98*(par("usr")[4]-par("usr")[3])+par("usr")[3])),paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
+axis(2, at=c(0.005,0.01,0.02,0.05,.1,.2), labels=c(.005,.01,.02,.05,.1,.2),cex.axis=0.9)
+legend("bottomleft",legend=labels.spp.genus(),col=col.spp(),pch=16, cex=0.9,bty="n",text.font=3)
 
 #species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
-plot(prop_prepollen_costs~seedset,SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.004,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
+plot(jitter(prop_prepollen_costs)~jitter(seedset),SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.004,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
 mod <- sma(prop_prepollen_costs~seedset,data=subset(SummarySpp[["mean"]]),log="x",slope=1,method="OLS")
 y.error.bars(SummarySpp[["mean"]]$seedset,SummarySpp[["mean"]]$prop_prepollen_costs,SummarySpp[["se"]]$prop_prepollen_costs)
 sma_abline(mod)
 sma_sum(mod)
-text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
-     paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
+text((10^(0.99*(par("usr")[2]-par("usr")[1])+par("usr")[1])),((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
+ paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
 axis(2, at=c(-0.2,0,.2,.4,.6,.8,1), labels=c("",0.0,0.2,0.4,0.6,0.8,""),cex.axis=1)
 
 #put together, big-seeded plants produce lots more buds than predicted from 1:1 relationship, but the "correct" number of seeds
@@ -462,7 +484,7 @@ mod3 <- sma(scaled_failure_count~embryo_endo_size,data=subset(SummaryInd,scaled_
 sma_abline(mod1)
 abline(mod2$coef[[1]][1,1],mod2$coef[[1]][2,1],col="blue")
 abline(mod3$coef[[1]][1,1],mod3$coef[[1]][2,1],col="red")
-legend("topright",legend=c("seed count","total bud count","failed flower count"),col=c("black","blue","red"),pch=c(16,21,8),bty="n")
+legend("topright",legend=c("seed count","total bud count","failed flower count"),col=c("black","blue","red"),pch="_",bty="n")
 
 dev.off()
 ```
@@ -552,7 +574,7 @@ yvar <- i
 xvar <- j
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 fit <- sma(data[[yvar]] ~ data[[xvar]], method="OLS", log="xy",slope.test=1)
-temp <- as.data.frame(c(xvar, yvar,select(fit$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Slope_test_p,n)))
+temp <- as.data.frame(c(xvar, yvar,dplyr::select(fit$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Slope_test_p,n)))
 colnames(temp)[2]<- "variable"
 colnames(temp)[1]<- "xvar"
 results <- bind_rows(results, temp)
@@ -562,9 +584,9 @@ results <- bind_rows(results, temp)
 write.csv(results, file="figs2/Accessory_Costs/Table07_correlations_with_repro_inv.csv",row.names=FALSE)
 ```
 
-#Figure 5. Correlations of various reproductive investment categories against plant weight
+#Figure 6. Correlations of various reproductive investment categories against plant weight
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure02_correlations_with_plant_weight.wmf", height=5, width=10)
+win.metafile("figs2/Accessory_Costs/Figure06_correlations_with_plant_weight.wmf", height=5, width=10)
 plot
 
 par(mfrow=c(1,2), cex=1, omi=c(.1,.6,.1,.05), mai=c(.8,.1,.1,.05))
@@ -584,7 +606,7 @@ abline(0,1)
 #mtext(text="total plant weight (mg)",side=1,line=2,outer=FALSE)
 
 yvar <- "repro_inv"
-xvar <- "propagule_inv"
+xvar <- "embryo_endo_inv"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
@@ -592,7 +614,7 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),log="xy",ylim=c(1,300000),xlim=c(1,300000), xlab="",ylab="",lty=results$linetype,pch=16)
 abline(0,1)
 mod <- lm(log10(propagule_inv)~log10(repro_inv),data=subset(SummaryInd,propagule_inv>0))
-mtext(text="investment in propagules (mg)",side=1,line=2,outer=FALSE)
+mtext(text="investment in propagules (embryos & endosperm) (mg)",side=1,line=2,outer=FALSE)
 mtext(text="total reproductive investment (mg)",side=2,line=2,outer=TRUE)
 
 xvar <- "repro_all_count"
@@ -679,7 +701,7 @@ fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy"
 results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="buds initiated (count)",ylab="seed count",lty=results$linetype,xlim=c(0.9,20000),ylim=c(0.9,20000))
 
-select(results,group,n,r2,pval,Slope,Slope_test_p)
+dplyr::select(results,group,n,r2,pval,Slope,Slope_test_p)
 abline(0,1,lwd=2)
 abline(-2,1,lwd=2)
 
