--- a/scripts/Growth_figs.rmd
+++ b/scripts/Growth_figs.rmd
@@ -40,7 +40,7 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,ylim=c(1)
                     main=spp,col=col.mature(data[[spp]]$mature))
 }
 
@@ -51,25 +51,27 @@ legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n"
 
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+par(mfrow=c(4,4), cex=1, omi=c(1.1,.5,.1,.1), mai=c(.1,.8,.5,0.1)) 
 yvar <- "growth_leaf"
 xvar <- "total_weight_0"
 
-data <- subset(SummaryInd,growth_leaf>0)
+data <- subset(SummaryInd)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",cex=1.4, xlab="",ylab="",
+                    col=col.age(data[[spp]]$age))
+  abline(0,0)
+  mtext(spp,3,line=0)
 }
 
-mtext("Investment in leaves (mg)", 2, outer=TRUE,cex=1.2)
-mtext("Initial plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+mtext("Investment in leaves (mg)", 2, outer=TRUE,cex=1.2,line=0)
+mtext("Initial plant weight (mg)", 1, outer=TRUE,cex=1.2,line=2)
+legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=.8,bty="n")
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+par(mfrow=c(4,4), cex=1, omi=c(1.1,.5,.1,.1), mai=c(.1,.8,.5,0.1))
 yvar <- "growth_stem"
 xvar <- "total_weight_0"
 
@@ -77,12 +79,13 @@ data <- subset(SummaryInd)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.3, xlab="",ylab="",
+                    col=col.age(data[[spp]]$age))
+  mtext(spp,3,line=0)
 }
 
-mtext("Investment in stems (mg)", 2, outer=TRUE,cex=1.2)
-mtext("Initial plant weight (mg)", 1, outer=TRUE,cex=1.2)
+mtext("Investment in stems (mg)", 2, outer=TRUE,cex=1.2,line=0)
+mtext("Initial plant weight (mg)", 1, outer=TRUE,cex=1.2,line=2)
 legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
@@ -91,7 +94,7 @@ legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 * far more dark purple dots below the 1:1 line
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+par(mfrow=c(4,4), cex=1, omi=c(1.1,.5,.1,.1), mai=c(.1,.8,.5,0.1))
 yvar <- "growth_stem_diameter"
 xvar <- "growth_shoot_diameter"
 
@@ -99,12 +102,13 @@ data <- subset(SummaryInd)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
+                    col=col.age(data[[spp]]$age))
+  mtext(spp,3,line=0)
 }
 
 mtext("increase in stem diameter (mm)", 2, outer=TRUE,cex=1.2)
-mtext("increase in shoot diameter (mm)", 1, outer=TRUE,cex=1.2)
+mtext("increase in shoot diameter (mm)", 1, outer=TRUE,cex=1.2,line=2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=0.9,bty="n")
 ```
 
